hphp/hack/test/typecheck/tconst/cannot_override_tconst.php
<?hh // strict

class Parent {
  const type ID = arraykey;
}

class Child extends Parent {
  const type ID = int;
}
